# shop_tgbot

./: app.py  pyproject.toml
handlers/users/: __init__.py  catalog.py  start.py
keyboards/default/: start_button.py
keyboards/inline/: inl_btn_catalog.py  inl_btn_tea.py
