[tool.poetry]
name = "maintemplate"
version = "0.1.0"
description = ""
authors = ["SOne"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.13"
environs = "^9.3.2"
loguru = "^0.5.3"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
pylint = "^2.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
runbot = "'"

